--- a/source/_posts/调度器看板.md
+++ b/source/_posts/调度器看板.md
@@ -3,11 +3,12 @@
 2021/2/2
 ---
 
-* 11.30 - 12.10 完成Myclass,gosql的Readme
+* 11.30 - 12.10 完成Myclass,jiesql的Readme
 
 2021/2/3
 ---
 
-
+* 9.00 -11.00 jiesql编码，调试
+* 
 
 
